# protocol

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cpp_demo.cpp  crc_gen.c  main.c  protocol.c  protocol.h  protocol_lite.c  protocol_lite.h  protocol_test.c  python_wrapper.cpp  test.c
.github/workflows/: build-project.yml
cmake/: PrintCmakeVariables.cmake  protocolConfig.cmake.in
example/: CMakeLists.txt  cpp_demo.cpp
include/: protocol.h
src/: protocol.c
test/: CMakeLists.txt  generate_examples.py  protocol_test.c  test_latency.py
wrappers/: CMakeLists.txt
wrappers/micropython/: Makefile  py_protocol.c
wrappers/python/: CMakeLists.txt  py_protocol.cpp  setup.py
